--- a/css/style-game.css
+++ b/css/style-game.css
@@ -51,6 +51,8 @@ body {
   button {
     cursor: pointer;
     color: #0a0a23;
+    font-style: italic;
+    font-size: 14px;
     background-color: #feac32;
     background-image: linear-gradient(#fecc4c, #ffac33);
     border: 3px solid #feac32;
@@ -62,8 +64,7 @@ body {
     width: 75%;
     border-radius: 50% 20% / 15% 40%;
     padding-top: 40px;
-    display: flex;
-    justify-content: center;
+    padding-left: 75px;
   }
 
   #scroll {
