final version pt.1 clean up

--- a/css/style-game.css
+++ b/css/style-game.css
@@ -5,8 +5,7 @@
   font-family: cursive;
   font-weight: 100px;
   text-align: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
 }
 
 body {
@@ -60,11 +59,12 @@ body {
   }
 
   #town {
-    height: 75%;
-    width: 75%;
+    height: 50%;
+    width: 50%;
     border-radius: 50% 20% / 15% 40%;
     padding-top: 40px;
-    padding-left: 75px;
+    padding-left: 300px;
+    position: fixed;
   }
 
   #scroll {
