final version CU 3

--- a/css/style-game.css
+++ b/css/style-game.css
@@ -1,6 +1,6 @@
 .title {
   color: #ffffff;
-  font-size: 90px;
+  font-size: 95px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-family: cursive;
   font-weight: 100px;
@@ -9,17 +9,17 @@
 }
 
 body {
-    background-color: #0a0a23; 
+    background-color: #130c03;
   }
   
   #text {
-    background-color: #0a0a23;
+    background-color: #130c03;
     color: #ffffff;
     padding: 10px;
   }
   
   #game {
-    max-width: 500px;
+    max-width: 550px;
     max-height: 400px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color:#ffffff;
@@ -31,14 +31,14 @@ body {
   
   #controls,
   #stats {
-    border: 1px solid #0a0a23;
+    border: 1px solid #130c03;
     padding: 5px;
     color: #0a0a23;
   }
   
   #monsterStats {
     display: none;
-    border: 1px solid #0a0a23;
+    border: 1px solid #130c03;
     padding: 5px;
     color: #ffffff;
     background-color: #c70d0d;
@@ -52,6 +52,8 @@ body {
     cursor: pointer;
     color: #0a0a23;
     font-style: italic;
+    font-weight: bold;
+    font-color: #130c03;
     font-size: 14px;
     background-color: #feac32;
     background-image: linear-gradient(#fecc4c, #ffac33);
@@ -64,7 +66,7 @@ body {
     width: 50%;
     border-radius: 40% 20% / 15% 40%;
     padding-top: 40px;
-    padding-left: 300px;
+    padding-left: 425px;
   }
 
   #scroll {
