--- a/css/style-game.css
+++ b/css/style-game.css
@@ -67,6 +67,7 @@ body {
     border-radius: 40% 20% / 15% 40%;
     padding-top: 40px;
     padding-left: 425px;
+    padding-bottom: 30px;
   }
 
   #scroll {
