--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 color: #262a76;
 font-family: futura;
 font-weight: bold;
-font-size: 24px;
+font-size: 34px;
 padding-left: 24px;
 }
   
@@ -10,23 +10,23 @@ padding-left: 24px;
 color: #000000;
 font-family: futura;
 font-style: italic;
-font-size: 16px;
+font-size: 20px;
 }
 
-.vsc {
+/*.vsc {
   color: #8d6fd1;
 font-family: futura;
 font-weight: bold;
 font-size: 16px;
 padding-left: 40px;
-}
+}*/
 
 .title {
 color: #C83D95;
 font-family: futura;
 font-style: bold;
-font-size: 43px;
-padding-left: 34px;
+font-size: 58px;
+padding-left: 64px;
 }
 
 /*green color: #00A86B*/
@@ -35,7 +35,7 @@ padding-left: 34px;
 color: #3257A8;
 font-family: futura;
 font-weight: bold;
-font-size: 30px;
+font-size: 40px;
 padding-bottom: 36px;
 }
 
@@ -43,7 +43,7 @@ padding-bottom: 36px;
 color: #3257A8;
 font-family: futura;
 font-weight: bold;
-font-size: 30px;
+font-size: 40px;
 padding-bottom: 36px;
 }
 
@@ -56,5 +56,6 @@ ul {
   margin: 0;
   padding: 0;
   padding-top: 34px;
+  padding-left: 30px;
   padding-bottom: 48px;
 }
