--- a/css/counter.css
+++ b/css/counter.css
@@ -18,6 +18,9 @@
   
   h1 {
     text-align: center;
+    font-size: 54px;
+    padding-top: 10px;
+    padding-bottom: 15px;
   }
   
   .container {
