--- a/css/counter.css
+++ b/css/counter.css
@@ -12,7 +12,7 @@
   body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
-    background-color: #3e00b3;
+    background-color: #320c7a;
     color: var(--light-grey);
   }
   
@@ -56,7 +56,7 @@
   input,
   select {
     min-height: 24px;
-    color: #3e00b3;
+    color: #320c7a;
     padding: 5px
   }
   
