musi and queue font change

--- a/css/music.css
+++ b/css/music.css
@@ -12,7 +12,7 @@
     font-size: var(--root-font-size);
   
     /* font-families */
-    --font-headline: "Roboto Mono", monospace;
+    --font-headline: futura;
     --font-family: "Lato", sans-serif;
   }
   
@@ -91,7 +91,7 @@
     background-color: var(--highlight-color);
   }
   
-  .fcc-title,
+  .app-title,
   .playlist-title {
     color: var(--secondary-color);
     margin: 0 10px;
